--- a/src/components/Declaration/AskRatesPopup.module.scss
+++ b/src/components/Declaration/AskRatesPopup.module.scss
@@ -17,3 +17,23 @@
     margin: 0 1em;
   }
 }
+
+
+.focus {
+  border-color: var(--color-focus);
+  
+  .controls {
+    background-color: var(--light-grey);
+  }
+
+  .control {
+    color: var(--pure-black);
+    &:hover {
+      color: var(--color-primary);
+    }
+  }
+}
+
+.active {
+  color: var(--color-primary);
+}
