--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -8,10 +8,10 @@ html, body{
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   color-adjust: economy;
+  color: $color_5;
 }
 
 table {
-  margin: 20px;
   border: 1px solid black;
 }
 
