--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,3 +1,8 @@
 $color_1: #23292f;
 $color_2: #ff7d00;
 $color_3: #E74E4A;
+$color_4: #b3b2b2;
+$color_5: #333;
+
+$color_6: #E5E6E6;
+$color_7: #96999B;
