--- a/src/components/PageDeclaration/AskRatesPopup.module.scss
+++ b/src/components/PageDeclaration/AskRatesPopup.module.scss
@@ -5,6 +5,10 @@
   font-weight: bold;
 }
 
+.description {
+  line-height: 1.4;
+}
+
 .fieldWrapper {
   margin: 1em 0;
 
@@ -17,14 +21,22 @@
 
 
 .table {
+  background-color: $color_8;
+
   thead td {
     padding-bottom: 1em;
     font-weight: 700;
+    background-color: $color_6;
   }
 
   td {
     border: 1px solid rgba(#333, .2);
+    font-weight: 400;
   }
+}
+
+.country {
+  font-weight: 400;
 }
 
 
